html in tooltip

--- a/src/app/components/index.html
+++ b/src/app/components/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="container">
       <div>
-        <div class="tooltip tooltip-top" data-tooltip="My tooltip on top" data-direction="top">
+        <div class="tooltip tooltip-top" data-tooltip="My tooltip on <em>top</em>" data-direction="top">
           <span>tooltip on top</span>
         </div>
 
