--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,15 @@
 <div class="container">
   <div>
-    <app-tooltip tip="My tooltip on top">
+    <app-tooltip tip="My tooltip on <em>top</em>">
       <span>Tooltip top</span>
     </app-tooltip>
-    <app-tooltip tip="My tooltip on left" direction="left">
+    <app-tooltip tip="My tooltip on <strong>left</strong>" direction="left">
       <span>Tooltip left</span>
     </app-tooltip>
-    <app-tooltip tip="My tooltip on bottom" direction="bottom">
+    <app-tooltip tip="My tooltip on <a target='__blank' href='https://github.com/kauelima21/venus'>bottom</a>" direction="bottom">
       <span>Tooltip bottom</span>
     </app-tooltip>
-    <app-tooltip tip="My tooltip on right" direction="right">
+    <app-tooltip tip="My tooltip on <u>right</u>" direction="right">
       <span>Tooltip right</span>
     </app-tooltip>
   </div>
