little refactor on app.component.html

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,9 +16,9 @@
         <span>Tooltip left</span>
       </tooltip-trigger>
       <tooltip-content content>
-        <ng-container>
+        <span>
           My tooltip on <strong>left</strong>
-        </ng-container>
+        </span>
       </tooltip-content>
     </tooltip-provider>
 
@@ -27,9 +27,9 @@
         <span>Tooltip right</span>
       </tooltip-trigger>
       <tooltip-content content>
-        <ng-container>
+        <span>
           My tooltip on <u>right</u>
-        </ng-container>
+        </span>
       </tooltip-content>
     </tooltip-provider>
 
@@ -38,12 +38,12 @@
         <span>Tooltip bottom</span>
       </tooltip-trigger>
       <tooltip-content content>
-        <ng-container>
+        <p>
           My tooltip on
         <a target="__blank" href="https://github.com/kauelima21/venus"
           >bottom</a
         >
-        </ng-container>
+        </p>
       </tooltip-content>
     </tooltip-provider>
   </div>
