change the ng-content select approach

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
 <div class="container">
   <div>
     <tooltip-provider direction="top">
-      <tooltip-trigger trigger>
+      <tooltip-trigger>
         <span>Tooltip top</span>
       </tooltip-trigger>
-      <tooltip-content content>
+      <tooltip-content>
         <ng-container>Precisa de ajuda? Clique
           <button (click)="toggleModal()">aqui</button>
         </ng-container>
